# claudecode-remote

./: .gitignore  CLAUDE.md  README.md  bridge.py  config.env  pyproject.toml
docs/: README_CN.md  install.md  start.md  usage.md
docs/plan/: roadmap.md
docs/plans/: new-features-plan.md  refactor-test-plan.md
docs/plans/spec/: alarm-hook-plan.md  new-optimize-hook-plan.md  notification-forwarding-plan.md  permission-request-plan.md  report-plan.md
docs/plans/spec/future/: named-tunnel-support-plan.md  new-slack-support-plan.md  telegram-group-per-project-plan.md
docs/spec/: new-features-plan.md  refactor-test-plan.md
hooks/: handle-permission.sh  play-alarm.sh  send-input-to-telegram.sh  send-notification-to-telegram.sh  send-to-telegram.sh
hooks/lib/: common.sh
scripts/: clean-logs.sh  install.sh  start.sh  uninstall.sh
scripts/lib/: common.sh
tests/: conftest.py  helpers.py  test_handler.py  test_project_utils.py  test_report.py  test_session.py  test_shell_scripts.py  test_sync_state.py  test_tmux_detection.py
