[project]
name = "claudecode-remote"
version = "0.1.0"
description = "Telegram bridge for Claude Code"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools]
py-modules = ["bridge"]

[tool.pytest.ini_options]
pythonpath = [".", "tests"]

[project.scripts]
claudecode-remote = "bridge:main"
